2005-11-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: bump MacOSX to 2.6.4.  use gmane for
	bug-lilypond@gnu.org

2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/contact.ihtml: add gmane links for all lists.

2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/stable.ihtml: Update mingw to 2.6.4-2.

2005-10-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/stable.ihtml: Update mingw and autopackage.

2005-10-16  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/install/index.html: note about ghoscript translated

2005-10-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/index.html: Typo.

2005-10-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: add a note about ghostscript on fedora. 

2005-10-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: move macos back to 2.6.3

2005-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: update macos download.

2005-10-08  John Mandereau  <john.mandereau@free.fr>

	* fr/contact.ihtml: add new mailing list lilypond-user-fr

	* fr/about/browser-language.html: add warning saying some pages
	are not translated

2005-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update autopackage, mingw.

	* site/about/faq.html:
	* site/about/features.html: Typos (Mark weber).  Remove some
	commas.

2005-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update.

2005-09-14  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/faq.html: update noteedit url.

2005-09-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/documentation.html: new file

2005-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Update autopackage.

2005-09-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: fix URL of upgrade package.

2005-09-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): trim
