@@ -48,7 +48,6 @@
 
 <br>
 
-<img src="@IMAGES@floating.png" align="right" alt="floating">
 
 <h2>Links</h2>
 
@@ -56,12 +55,6 @@
   LilyPond maakt deel uit van het <a href="http://www.gnu.org/">GNU Project</a>.
 </p>
 
-<br>
-
-<a href="http://www.linuxaudiodev.org/">
-  <img align="right"
-       src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
-       alt="Linux Audio Developers Logo"></a>
 <p>
   De auteurs werken samen met de
   <a href="http://www.linuxdj.com/audio/lad/eventslt2003.php3">Linux
@@ -69,11 +62,23 @@
 </p>
 
 <p>
+  LilyPond maakt gebruik van de uitbreidingstaal Scheme via de <a
+  href="http://www.gnu.org/software/guile">GUILE</a> omgeving, een
+  dialect van de LISP programmeertaal
+</p>
+
+
+
+<img src="@IMAGES@floating.png"  alt="floating">
+
   <a href="http://www.gnu.org/software/guile">
-    <img src="@IMAGES@guile-logo.jpeg" align="right" alt="guile-logo">
+    <img src="@IMAGES@guile-logo.jpeg" alt="guile-logo">
   </a>
 
-  LilyPond maakt gebruik van de extension language
-  <a href="http://www.gnu.org/software/guile">GUILE</a> Scheme interpreter
-  van Project GNU.
-</p>
+
+<img src="@IMAGES@/lisplogo_warning_128.png" alt="lisp-logo">
+  
+<a href="http://www.linuxaudiodev.org/">
+  <img 
+       src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
+       alt="Linux Audio Developers Logo"></a>
