@@ -46,8 +46,6 @@
 
 <br>
 
-<img src="@IMAGES@floating.png" align="right" alt="floating">
-
 <h2>Links</h2>
 
 <p>
@@ -56,10 +54,6 @@
 
 <br>
 
-<a href="http://www.linuxaudiodev.org/">
-  <img align="right"
-       src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
-       alt="Linux Audio Developers Logo"></a>
 <p>
   The developers cooperate with the
   <a href="http://www.linuxdj.com/audio/lad/eventslt2003.php3">Linux
@@ -67,11 +61,23 @@
 </p>
 
 <p>
+  LilyPond uses Project GNU's <a
+  href="http://www.gnu.org/software/guile">GUILE</a> Scheme
+  interpreter for extension. Scheme is a dialect of the LISP
+  programming language.
+
+</p>
+
+<img src="@IMAGES@floating.png"  alt="floating">
+
   <a href="http://www.gnu.org/software/guile">
-    <img src="@IMAGES@guile-logo.jpeg" align="right" alt="guile-logo">
+    <img src="@IMAGES@guile-logo.jpeg" alt="guile-logo">
   </a>
 
-  LilyPond uses Project GNU's
-  <a href="http://www.gnu.org/software/guile">GUILE</a> Scheme interpreter
-  for extension.
-</p>
+
+<img src="@IMAGES@/lisplogo_warning_128.png" alt="lisp-logo">
+  
+<a href="http://www.linuxaudiodev.org/">
+  <img 
+       src="http://www.linuxdj.com/audio/lad/graphics/ladbanner_50.gif"
+       alt="Linux Audio Developers Logo"></a>
