@@ -1,5 +1,11 @@
 2005-11-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/images/lisplogo_warning_128.png (Module): new file.
+
+	* nl/contact.ihtml: gmane links.
+
+	* nl/about/index.html: add lisperati logo.
+
 	* site/install/stable.ihtml: bump MacOSX to 2.6.4.  use gmane for
 	bug-lilypond@gnu.org
 
